--- a/src/main/resources/locales/zh-CN.json
+++ b/src/main/resources/locales/zh-CN.json
@@ -2,14 +2,19 @@
   "msg": {
     "200": "操作成功",
     "400": "操作错误",
-    "1001": "认证失败",
-    "1002": "账号不存在",
-    "1003": "角色错误",
-    "2001": "token过期",
-    "2002": "token解析异常",
-    "3001": "参数缺失",
-    "3002": "参数错误",
-    "4001": "玩家未在线"
+    "1001": "token错误",
+    "1002": "token过期",
+    "1003": "token解析失败",
+    "1004": "参数缺失",
+    "1005": "参数错误",
+    "1006": "认证失败",
+    "1007": "无角色权限",
+    "2001": "账户不存在",
+    "2002": "玩家未在线",
+    "2003": "邮件发送失败",
+    "2004": "未找到验证码邮件",
+    "2005": "验证码邮件过期",
+    "2006": "验证码对比失败，还剩%d次机会"
   },
   "mail": {
     "verifyCode": {
