--- a/src/main/resources/locales/zh-CN.json
+++ b/src/main/resources/locales/zh-CN.json
@@ -9,6 +9,7 @@
     "1005": "参数错误",
     "1006": "认证失败",
     "1007": "无角色权限",
+    "2000": "账户已存在",
     "2001": "账户不存在",
     "2002": "玩家未在线",
     "2003": "邮件发送失败",
