--- a/src/main/resources/locales/zh-CN.json
+++ b/src/main/resources/locales/zh-CN.json
@@ -2,6 +2,7 @@
   "msg": {
     "200": "操作成功",
     "400": "操作错误",
+    "1000": "token生成失败",
     "1001": "token错误",
     "1002": "token过期",
     "1003": "token解析失败",
